rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__multi_fact__rolling_with_multiplied_aggregate_hub_measure.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/multi_fact.rs
expression: result
---
payments__payment_type | customers__registered_at_day | payments__rolling_sum_7d | customers__total_lifetime_value
-----------------------+------------------------------+--------------------------+--------------------------------
card                   | 2024-01-10 00:00:00          | 100.00                   | 500.00                         
card                   | 2024-01-11 00:00:00          | 100.00                   | NULL                           
card                   | 2024-01-12 00:00:00          | 100.00                   | NULL                           
card                   | 2024-01-13 00:00:00          | 100.00                   | NULL                           
card                   | 2024-01-14 00:00:00          | 100.00                   | NULL                           
card                   | 2024-01-15 00:00:00          | 300.00                   | 300.00                         
card                   | 2024-01-16 00:00:00          | 300.00                   | NULL                           
card                   | 2024-01-17 00:00:00          | 200.00                   | NULL                           
card                   | 2024-01-18 00:00:00          | 200.00                   | NULL                           
card                   | 2024-01-19 00:00:00          | 200.00                   | NULL                           
card                   | 2024-01-20 00:00:00          | 325.00                   | 200.00                         
card                   | 2024-01-21 00:00:00          | 325.00                   | NULL                           
card                   | 2024-01-22 00:00:00          | 125.00                   | NULL                           
card                   | 2024-01-23 00:00:00          | 125.00                   | NULL                           
card                   | 2024-01-24 00:00:00          | 125.00                   | NULL                           
card                   | 2024-01-25 00:00:00          | 125.00                   | NULL                           
cash                   | 2024-01-10 00:00:00          | 200.00                   | 500.00                         
cash                   | 2024-01-11 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-12 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-13 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-14 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-15 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-16 00:00:00          | 200.00                   | NULL                           
cash                   | 2024-01-20 00:00:00          | 75.00                    | 200.00                         
cash                   | 2024-01-21 00:00:00          | 75.00                    | NULL                           
cash                   | 2024-01-22 00:00:00          | 75.00                    | NULL                           
cash                   | 2024-01-23 00:00:00          | 75.00                    | NULL                           
cash                   | 2024-01-24 00:00:00          | 75.00                    | NULL                           
cash                   | 2024-01-25 00:00:00          | 75.00                    | NULL
