rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__multi_fact__two_rolling_from_different_facts.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/multi_fact.rs
expression: result
---
customers__name | customers__registered_at_day | payments__rolling_sum_7d | messages__rolling_count_7d
----------------+------------------------------+--------------------------+---------------------------
Alice           | 2024-01-10 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-11 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-12 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-13 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-14 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-15 00:00:00          | 300.00                   | 2                         
Alice           | 2024-01-16 00:00:00          | 300.00                   | 2                         
Bob             | 2024-01-15 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-16 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-17 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-18 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-19 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-20 00:00:00          | 200.00                   | 3                         
Bob             | 2024-01-21 00:00:00          | 200.00                   | 3                         
Charlie         | 2024-01-20 00:00:00          | 200.00                   | 1                         
Charlie         | 2024-01-21 00:00:00          | 200.00                   | 1                         
Charlie         | 2024-01-22 00:00:00          | 200.00                   | 1                         
Charlie         | 2024-01-23 00:00:00          | 200.00                   | 1                         
Charlie         | 2024-01-24 00:00:00          | 200.00                   | 1                         
Charlie         | 2024-01-25 00:00:00          | 200.00                   | 1
